# recommendation-system

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  cleandata.ipynb  dataset.xlsx  dataset2.xlsx  evaluation.ipynb  function_app.py  get_courses.py  homepage.html  hybrid.ipynb  hybrid.py  item-based.ipynb  knn.ipynb  knn.py  knn_X.pickle  knn_features.pickle  pyproject.toml  requirements.txt  shortcourses2566.xlsx  test.ipynb  test.py  tfidf.ipynb  tfidf.py  tfidf_matrix.pickle  tfidf_y.pickle  workshop.ipynb  y.pickle
.devcontainer/: devcontainer.json
.github/workflows/: azure-functions-app-python.yml
pickle/: filename.pickle  i_dataset.pickle  knn.pickle  knn_X.pickle  knn_matrix.pickle  knn_y.pickle  tfidf.pickle  tfidf_X.pickle  tfidf_matrix.pickle  tfidf_y.pickle  ui_dataset.pickle
src/isne-recommendation/: FeatureRatingsKNN.py  Hybrid.py  __init__.py
src/isne_recommendation/: FeatureRatingsKNN.py  Hybrid.py  TfidfLinearKernel.py  __init__.py
templates/: homepage.html  predata.html  recommendation.html
uploads/: Coursera.xlsx  Sample Dataset.xlsx  dataset.xlsx  shortcourses2563.xlsx  shortcourses2564.xlsx  shortcourses2565.xlsx  shortcourses2566.xlsx  student_information.xlsx
