[project]
name = "isne-recommendation"
version = "0.0.1"
authors = [
  { name="Newin Yamaguchi", email="newin_yamaguchi@cmu.ac.th" },
]
description = "Our recommendation system will offer you the products or services that users are interested in and consume."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"