[project]
name = "isne-recommendation"
version = "0.0.6"
dependencies = [
  'fuzzywuzzy==0.18.0',
  'joblib==1.3.2',
  'Levenshtein==0.25.0',
  'numpy==1.26.4',
  'pandas==2.2.1',
  'python-dateutil==2.9.0.post0',
  'python-Levenshtein==0.25.0',
  'pytz==2024.1',
  'rapidfuzz==3.6.2',
  'scikit-learn==1.4.1.post1',
  'scipy==1.12.0',
  'six==1.16.0',
  'threadpoolctl==3.3.0',
  'tzdata==2024.1',
  'openpyxl==3.1.2',
]
authors = [
  { name="Newin Yamaguchi", email="newin_yamaguchi@cmu.ac.th" },
]
description = "Our recommendation system will offer you the products or services that users are interested in and consume."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/startg2545/recommendation-system"
Issues = "https://github.com/startg2545/recommendation-system/issues"